--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "apexcharts": "^3.45.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.1",
     "connect-livereload": "^0.6.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "flowbite": "^2.2.1",
     "livereload": "^0.9.3",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7"
   },
