--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "apexcharts": "^3.45.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.1",
     "connect-livereload": "^0.6.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "flowbite": "^2.2.1",
     "livereload": "^0.9.3",
     "mongoose": "^8.0.3",
