--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nocache": "^4.0.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
     "path": "^0.12.7"
   },
