--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "file-saver": "^2.0.5",
     "flowbite": "^2.2.1",
+    "html2pdf.js": "^0.10.1",
     "livereload": "^0.9.3",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
