--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js -e ejs"
+    "start": "nodemon app.js -e ejs",
+    "create-admin": "node createAdmin.js"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +30,8 @@
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "prettier-plugin-tailwindcss": "^0.5.7"
