--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.1",
     "connect-livereload": "^0.6.1",
+    "dotenv": "^16.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
