--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 email_pswd = rtau qlbi fsbm xogt
 cloudinary_Api_Key = 861167655669645
 cloudinary_Secret_Key = Z5fTeUL5gHA4cdj5VvXtsgpqWJk
+
+razorpay_key_Secret = Kgvk8R04wASBxxMdnxR3CVZN
