--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-email_pswd = rtau qlbi fsbm xogt
-cloudinary_Api_Key = 861167655669645
-cloudinary_Secret_Key = Z5fTeUL5gHA4cdj5VvXtsgpqWJk
+email_pswd = your email
+cloudinary_Api_Key = your api key
+cloudinary_Secret_Key =your secret key
 
-razorpay_key_Secret = Kgvk8R04wASBxxMdnxR3CVZN
+razorpay_key_Secret =your secert key
